<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/travelworldtwo"
    android:paddingLeft="@dimen/dime100dp"
    android:paddingRight="@dimen/dimen64dp"
    android:paddingTop="@dimen/dimen10dp"
    tools:context="com.example.aisha.intrepidget.FirstFragment"><![CDATA[

     />











    ]]>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toStartOf="@+id/btnDelete"
        android:text="@string/planninpage"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/primaryTextColor"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvCity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/etDuration"
        android:layout_alignStart="@+id/tvMonthYear"
        android:layout_marginBottom="14dp"
        android:text="@string/strcity"
        android:textColor="@color/primaryTextColor"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/etCity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/etDuration"
        android:layout_marginTop="55dp"
        android:ems="10"
        android:textColor="@color/primaryTextColor"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/tvDuration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/etCity"
        android:layout_marginTop="37dp"
        android:text="@string/strduration"
        android:textColor="@color/primaryTextColor"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/etDuration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tvDuration"
        android:layout_alignStart="@+id/etMonthYear"
        android:ems="10"
        android:textColor="@color/primaryTextColor"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/tvMonthYear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/etDuration"
        android:layout_marginTop="23dp"
        android:text="@string/strMonthyear"
        android:textColor="@color/primaryTextColor"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/etMonthYear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/etId"
        android:layout_below="@+id/etDuration"
        android:ems="10"
        android:textColor="@color/primaryTextColor"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/etId"
        android:layout_marginTop="42dp"
        android:background="@color/secondaryLightColor"
        android:text="@string/strAdd" />

    <Button
        android:id="@+id/btnViewAll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tvGetCities"
        android:layout_alignEnd="@+id/tvCity"
        android:background="@color/secondaryLightColor"
        android:text="@string/strViewAll" />

    <Button
        android:id="@+id/btnUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btnViewAll"
        android:layout_alignBottom="@+id/btnViewAll"
        android:layout_marginStart="12dp"
        android:layout_toEndOf="@+id/btnViewAll"
        android:background="@color/secondaryLightColor"
        android:text="@string/strUpdate" />

    <TextView
        android:id="@+id/tvId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/etId"
        android:layout_alignStart="@+id/tvMonthYear"
        android:text="@string/stringId"
        android:textColor="@color/primaryTextColor"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/etId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etMonthYear"
        android:layout_toEndOf="@+id/tvGetCities"
        android:ems="10"
        android:textColor="@color/primaryTextColor"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/btnDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btnUpdate"
        android:layout_alignBottom="@+id/btnUpdate"
        android:layout_marginStart="13dp"
        android:layout_toEndOf="@+id/btnUpdate"
        android:background="@color/secondaryLightColor"
        android:text="@string/strdelete" />

    <Button
        android:id="@+id/btnGetCities"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/tvGetCities"
        android:layout_below="@+id/tvGetCities"
        android:layout_marginTop="15dp"
        android:background="@color/secondaryLightColor"
        android:text="@string/strgetMY" />

    <TextView
        android:id="@+id/tvGetCities"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/btnAdd"
        android:layout_marginTop="23dp"
        android:text="@string/strGetMY"
        android:textColor="@color/primaryTextColor"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/etGetCities"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnUpdate"
        android:layout_marginStart="11dp"
        android:layout_toEndOf="@+id/tvGetCities"
        android:ems="10"
        android:textColor="@color/primaryTextColor"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/tvResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/btnGetCities"
        android:layout_marginTop="25dp"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/primaryTextColor"
        android:textStyle="bold" />
</RelativeLayout>
